# experiment_mono_repo

./: .gitignore  README.md
deepfake/: .gitignore  AGENT.md  README.md  pyproject.toml
deepfake/deepfake/: blocks.py  cli.py  dataset.py  dataset_test.py  decoder.py  discriminator.py  encoder.py  encoder_test.py  lit_module.py  render.py
deepfake/deepfake/conf/: default.yaml
goal_conditioned_rl/: .gitignore  README.md  config.yaml  main.py  pyproject.toml
goal_conditioned_rl/.cursor/rules/: code-comments.mdc
goal_conditioned_rl/goal_conditioned_rl/: dataset.py  environment.py  experiment_runner.py  lit_module.py
multi_hypothesis_prediction/: .gitignore  README.md  pyproject.toml
multi_hypothesis_prediction/lightning_logs/version_3/: metrics.csv
multi_hypothesis_prediction/lightning_logs/version_4/: metrics.csv
multi_hypothesis_prediction/lightning_logs/version_5/: metrics.csv
multi_hypothesis_prediction/lightning_logs/version_6/: metrics.csv
multi_hypothesis_prediction/lightning_logs/version_7/: metrics.csv
multi_hypothesis_prediction/lightning_logs/version_8/: metrics.csv
multi_hypothesis_prediction/lightning_logs/version_9/: metrics.csv
multi_hypothesis_prediction/multi_hypothesis_prediction/: __init__.py  dataloader.py  lit_module.py  main.py
qwen_text_to_speech/: main.py  pyproject.toml
recursive_prediction/: .gitignore  config.yaml  lit_module.py  main.py  model.py  pyproject.toml
self_speculation/: .gitignore  config.yaml  dataset.py  lit_module.py  main.py  model.py  pyproject.toml
toy_deepfake/: .gitignore  README.md  pyproject.toml
toy_deepfake/toy_deepfake/: __init__.py  centering.py  config.yaml  lit_module.py  main.py
toy_deepfake/toy_deepfake/dataset/: __init__.py  dataset.py  dataset_test.py
(+6 files in other folders)
