[project]
name = "toy-deepfake"
version = "0.1.0"
description = "Toy deepfake experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "torch",
    "pytorch-lightning",
]

[project.scripts]
toy-deepfake = "toy_deepfake.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["toy_deepfake"]
