[project]
name = "toy-deepfake"
version = "0.1.0"
description = "Toy deepfake experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "lightning>=2.0",
    "pyyaml>=6.0",
    "tensorboard>=2.14",
    "torch",
]

[project.scripts]
toy-deepfake = "toy_deepfake.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "toy_deepfake/config.yaml",
]
exclude = [
    "**/*_test.py",
]

[tool.hatch.build.targets.wheel]
packages = ["toy_deepfake"]

[dependency-groups]
dev = [
    "matplotlib>=3.8",
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["toy_deepfake"]
python_files = ["*_test.py", "test_*.py"]
